font-size adjustments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main class="grid">
     <section class="hero">
       <div class="hero__logo">
-        <img src="./images/logo.svg" alt="Clipboard Logo">
+        <img src="./images/logo.svg" alt="Clipboard Logo" width="125" height="125">
       </div>
 
       <div class="hero__text">
@@ -126,7 +126,7 @@
         <li class="supercharge__item">
           <div class="supercharge__icon"><img
               src="./images/icon-blacklist.svg"
-              alt="List icon">
+              alt="List icon" width="44" height="40">
           </div>
           <h3>Create blacklists</h3>
           <p>
@@ -137,7 +137,8 @@
         </li>
         <li class="supercharge__item">
           <div class="supercharge__icon"><img
-              src="./images/icon-text.svg" alt="Text icon">
+              src="./images/icon-text.svg" alt="Text icon"
+              width="36" height="32">
           </div>
           <h3>Plain text snippets</h3>
           <p>
@@ -148,7 +149,7 @@
         <li class="supercharge__item">
           <div class="supercharge__icon"><img
               src="./images/icon-preview.svg"
-              alt="Preview icon">
+              alt="Preview icon" width="50" height="32">
           </div>
           <h3>Sneak preview</h3>
           <p>
@@ -159,25 +160,28 @@
       </ul>
       <div class="logos">
         <div class="logo">
-          <img src="./images/logo-google.png" alt="Google">
+          <img src="./images/logo-google.png" alt="Google"
+            width="164" height="49">
         </div>
 
         <div class="logo">
-          <img src="./images/logo-ibm.png" alt="IBM">
+          <img src="./images/logo-ibm.png" alt="IBM"
+            width="139" height="51">
         </div>
 
         <div class="logo">
           <img src="./images/logo-microsoft.png"
-            alt="Microsoft">
+            alt="Microsoft" width="165" height="35">
         </div>
 
         <div class="logo">
-          <img src="./images/logo-hp.png" alt="HP">
+          <img src="./images/logo-hp.png" alt="HP"
+            width="135" height="56">
         </div>
 
         <div class="logo">
           <img src="./images/logo-vector-graphics.png"
-            alt="Vector Graphics">
+            alt="Vector Graphics" width="125" height="30">
         </div>
       </div>
     </section>
@@ -206,7 +210,7 @@
   <footer class="footer grid">
 
     <div class="footer__logo">
-      <img src="./images/logo.svg" alt="Clipboard Logo">
+      <img src="./images/logo.svg" alt="Clipboard Logo" width="125" height="125">
     </div>
 
     <ul class="footer__links">
@@ -219,16 +223,17 @@
 
     <div class="footer__media">
       <a class="icon" href="https://facebook.com">
-        <img src="./images/icon-facebook.svg"
-          alt="facebook">
+        <img src="./images/icon-facebook.svg" alt="facebook"
+          width="24" height="24">
       </a>
 
       <a class="icon" href="https://twitter.com">
-        <img src="./images/icon-twitter.svg" alt="twitter">
+        <img src="./images/icon-twitter.svg" alt="twitter"
+          width="24" height="24">
       </a>
       <a class="icon" href="https://instagram.com">
         <img src="./images/icon-instagram.svg"
-          alt="instagram">
+          alt="instagram" width="24" height="24">
       </a>
     </div>
   </footer>
