font-size adjustments

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <div class="snippets__image">
 
           <img src="./images/image-computer.png"
-            alt="A computer displaying the Clipboard app">
+            alt="A computer displaying the Clipboard app" width="752"
+            height="752">
         </div>
 
         <!-- list -->
@@ -109,7 +110,7 @@
       <!-- image -->
       <img class="access__image"
         src="./images/image-devices.png"
-        alt="Devices displaying the Clipboard app">
+        alt="Devices displaying the Clipboard app" width="905" height="575">
     </section>
 
     <section class="supercharge">
