font-size adjustments

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <div class="snippets__image">
 
           <img src="./images/image-computer.png"
-            alt="A computer displaying the Clipboard app" width="752"
-            height="752">
+            alt="A computer displaying the Clipboard app">
         </div>
 
         <!-- list -->
@@ -110,7 +109,7 @@
       <!-- image -->
       <img class="access__image"
         src="./images/image-devices.png"
-        alt="Devices displaying the Clipboard app" width="905" height="575">
+        alt="Devices displaying the Clipboard app">
     </section>
 
     <section class="supercharge">
@@ -211,7 +210,7 @@
   <footer class="footer grid">
 
     <div class="footer__logo">
-      <img src="./images/logo.svg" alt="Clipboard Logo" width="125" height="125">
+      <img src="./images/logo.svg" alt="Clipboard Logo">
     </div>
 
     <ul class="footer__links">
