font-size adjustments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <main class="grid">
     <section class="hero">
       <div class="hero__logo">
-        <img src="./images/logo.svg" alt="Clipboard Logo" width="125" height="125">
+        <img src="./images/logo.svg" alt="Clipboard Logo"
+          width="125" height="125">
       </div>
 
       <div class="hero__text">
@@ -214,11 +215,15 @@
     </div>
 
     <ul class="footer__links">
-      <li><a href="#">FAQs</a></li>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Press Kit</a></li>
-      <li><a href="#">Install Guide</a></li>
+      <li class="footer__link"><a href="#">FAQs</a></li>
+      <li class="footer__link"><a href="#">Contact Us</a>
+      </li>
+      <li class="footer__link"><a href="#">Privacy
+          Policy</a></li>
+      <li class="footer__link"><a href="#">Press Kit</a>
+      </li>
+      <li class="footer__link"><a href="#">Install Guide</a>
+      </li>
     </ul>
 
     <div class="footer__media">
